# simpleCRM

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  README
app/: crud.py  database.py  main.py  models.py  schemas.py
app/core/: config.py
app/routers/: contacts.py  offers.py
frontend/: README.md  USER_GUIDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  customers.ts
frontend/src/components/: CustomerForm.tsx  CustomerList.tsx
frontend/src/pages/Customers/: CustomersPage.tsx
tests/: test_main.py
