[tool.poetry]
name = "simple-crm"
version = "0.1.0"
description = "A simple CRM web application using FastAPI and SQLite."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
databases = "^0.5.5"
# Require Pydantic v2 to match model_config/model_dump usage
pydantic = ">=2.0,<3.0"
pydantic-settings = "^0.1.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
exclude = ["get-pip.py", "venv", ".venv"]

[tool.ruff.lint]
extend-ignore = ["E203"]
